<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <MultiSelectListPreference
        android:dialogTitle="@string/select_sections"
        android:entries="@array/sections_names"
        android:entryValues="@array/sections_values"
        android:key="@string/sections_prefs_key"
        android:title="@string/sections" />

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_articles_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_number_of_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_articles_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <!--<ListPreference     android:title="Order by"-->
        <!--android:summary="Select the order of articles you prefer"-->
        <!--android:key="orderBy"-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/listArray2"-->
        <!--android:entryValues="@array/listValues2" />-->
</PreferenceScreen>